# django-autoslugfield

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  run_tests.py  setup.py  tox.ini
.github/workflows/: python-package.yml
django_autoslugfield/: __init__.py  fields.py  utils.py
tests/: models.py  settings.py  tests.py
