[project]
name = "django_easy_autoslug"
description = "Automatic slug for django"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["slug", "django"]
license = {text = "MIT"}
dynamic = ["version"]
authors = [
	{ name = "Miroslav Bendík", email = "miroslav.bendik@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"django",
]

[project.urls]
homepage = "https://github.com/mireq/django-autoslugfield"
documentation = "https://github.com/mireq/django-autoslugfield"
repository = "https://github.com/mireq/django-autoslugfield"
changelog = "https://github.com/mireq/django-autoslugfield/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"tox",
	"pylint",
	"pre-commit",
	"bump2version",
	"commitizen",
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_autoslugfield"]

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "$version"
